--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <link rel="stylesheet" href="./css/style.css">
     <title>我和小🐖</title>
 </head>
@@ -26,8 +26,8 @@
     },0)
   </script>
 <body>
-    <p style="font-size: 20px;">我们相识了</p>
-    <span id="time" style="font-size: 40px;color: pink;margin-left: 2px;">
+    <p style="font-size: 100px;">我们相识了</p>
+    <span id="time" style="font-size: 120px;color: pink;margin-left: 2px;">
     </span>
     <div class="img">
         <ul>
