--- a/index.html
+++ b/index.html
@@ -26,9 +26,8 @@
     },0)
   </script>
 <body>
-    <p style="font-size: 100px;">我们相识了</p>
-    <span id="time" style="font-size: 120px;color: pink;margin-left: 2px;">
-    </span>
+    <p style="font-size: calc(3.5em + 1vw)">我们相识了</p>
+    <span id="time" style="font-size: calc(3.5em + 1vw);color: pink;margin-left: 2px;"></span>
     <div class="img">
         <ul>
             <li><img src="./images/1.jpg" alt="" srcset=""></li>
